docs: README 랜덤 생성된 숫자 예외 상황 추가